# manber-myers-suffix-array

./: .gitignore  CMakeLists.txt  Doxyfile  GRADING.md  LICENSE  README.md
.github/workflows/: ci-cd.yml
external_src/: CMakeLists.txt
include/: AdjacentLcp.h  BurrowsWheelerTransform.h  ManberMyersBuild.h  SuffixArray.h  SuperMaximal.h
output/: BurrowsWheelerTransformOutput.txt  SuperMaximalMatches.txt
src/: AdjacentLcp.cpp  BurrowsWheelerTransform.cpp  CMakeLists.txt  ManberMyersBuild.cpp  SuffixArray.cpp  SuperMaximal.cpp
test/: CMakeLists.txt  test_AssignmentInput.cpp  test_Banana.cpp  test_ManberMyersBuild.cpp
